# Jogo_Snake_Tkinter

./: .gitignore  LICENSE  base.py  pyproject.toml
